# DynaDubu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml  ci.yml
cmake/: compiler_features.cmake  util.cmake
dyna-dubu/: CMakeLists.txt
dyna-dubu/src/dyna-dubu/: SharedLibrary.cpp  SharedLibrary.h
dyna-dubu/test/: plugin.h  test.cpp
dyna-dubu/test/dubu/: dubu.cpp
dyna-dubu/test/mina/: mina.cpp
example/: CMakeLists.txt
example/example-app/: main.cpp
example/example-app/plugin/: plugin.h  plugin_api.h
example/tofu/: tofu.cpp
